<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">MyApplication</string>

    //activity_profileへの記載
    <string name="tv_profile_name">池谷　優美</string>
    <string name="tv_profile_birthday">1985/05/28</string>
    <string name="bt_profile_edit">edit仮</string>
    <string name="bt_toTab">Tabテスト</string>

    //activity_profile_editへの記載
    <string name="tv_edit_toolbar">プロフィールを編集</string>
    <string name="tv_edit_name">名前</string>
    <string name="et_edit_name"></string>
    <string name="tv_edit_birthday">誕生日</string>
    <string name="et_edit_birthday"></string>
    <string name="tv_edit_event">イベントの日</string>
    <string name="et_edit_event"></string>
    <string name="et_edit_note">好き嫌い、特徴をメモ</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="tv_received_fragment">もらったもの</string>
    <string name="tv_gave_fragment">あげたもの</string>


</resources>
